--- a/css/base.css
+++ b/css/base.css
@@ -88,23 +88,27 @@ body {
     }
 
     /* Key Visual Video */
+
     .videoWrapper {
-        width: 35.2rem; /* Adjust width as needed */
-        height: 35rem ; /* Adjust height as needed */
+        max-width: 110%; /* Adjust width as needed */
+        max-height: 100% ; /* Adjust height as needed */
         clip-path: inset(0 2% 0 0 round 0);
         overflow: hidden;
-        padding: 4rem 2.5rem;
+        padding: 4rem 6.2%;
         
     }
-    video {
-        width: 100%;
-        height: 100%;
+    .videoWrapper video {
+        max-width: 100%;
+        max-height: 100%;
         object-fit: cover;
+        clip-path: inset(0 2% 0 0 round 0);
+
     }
 
     /* wideWaterDrop */
     .wideWaterDrop img {
-        width: 40.2rem;
+        width: 100%;
+        height: auto;
         padding: 4rem 0 3rem 0 ;
     }
 
@@ -117,7 +121,7 @@ body {
         margin: 0;
     }
     .about_list{
-        margin: 0;
+        margin: 0 0 4rem 0;
         display: flex;
         justify-content: space-between;
         list-style-type: none;
@@ -126,10 +130,35 @@ body {
         font-weight: bolder;
         }
 
+
+    /* Droplet Border1 */
+    .dropletBorder1 {
+        width: 8.6rem;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-around;
+    }
+    .droplet_Small img{
+        width: 1.3rem;
+        padding: 0.8rem 0 0 0;
+    }
+
+    .droplet_Large img{
+        width: 2rem;
+    }
+
+
+
     /* about info */
     .about_container {
         margin: 0 2.5rem ;
+        padding: 4rem 0 16rem 0;
     }
+
+    .about p {
+        font-size: 2rem;
+    }
+
     .aboutInfo {
         margin: auto 4rem;
     }
@@ -137,6 +166,12 @@ body {
         text-align: center;
         font-size: 2.6rem;
         color: #01A2A3;
+        margin: 4rem 0 2rem 0;
+    }
+    .aboutInfo picture img {
+        max-width: 100%;
+        padding: 2rem 0 4rem 0;
+        
     }
 
     /* TripQuestとは？　セクション */
